--- a/web/src/assets/locales/en.json
+++ b/web/src/assets/locales/en.json
@@ -1,5 +1,6 @@
 {
   "404": {
+    "title": "Page not found",
     "heading": "Woah, you found the 404 page!",
     "text": "Though, you were probably looking for something else. Check the URL or start from the home page.",
     "cta": "Let's go home"
@@ -108,6 +109,7 @@
     }
   },
   "portfolio": {
+    "title": "Portfolio",
     "heading": "Portfolio",
     "myWork": "My work",
     "caseStudy": "Case study",
@@ -122,6 +124,7 @@
     }
   },
   "about": {
+    "title": "About",
     "heading": "About me",
     "bio": {
       "heading": {
@@ -188,6 +191,7 @@
     }
   },
   "contact": {
+    "title": "Contact",
     "heading": "Let's get in touch! 💬",
     "openForm": "Open contact form",
     "or": "or",
