🌐 Web: Add localized social embeds and `<html>` `lang` attribute

--- a/web/src/assets/locales/en.json
+++ b/web/src/assets/locales/en.json
@@ -10,6 +10,7 @@
     "lastName": "Billman",
     "fullName": "Marcus Billman",
     "baseUrl": "https://marcusbillman.com",
+    "domain": "marcusbillman.com",
     "close": "Close",
     "toastCopySuccess": "Copied! 📋",
     "toastCopyError": "Failed to copy 😢",
